Removing few code smells